# RedGir

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  ROADMAP.md  build.rs
src/: _lib.rs  engine.rs  lib.rs  main.rs
src/assets/: asset_manager.rs
src/audio/: audio_manager.rs
src/core/: engine.rs
src/ffi/: mod.rs
src/ffi/cpp/: CMakeLists.txt  cpp.rs
src/ffi/cpp/RedGir/: sprite.h
src/ffi/cpp/_include/: ffi.h
src/ffi/cpp/include/: color.h  engine.h  ffi.h  shader.h  sprite.h  timer.h
src/ffi/cpp/include/RedGir/: engine.h  shader.h  sprite.h  timer.h
src/ffi/cpp/src/: color.cpp  engine.cpp  shader.cpp  sprite.cpp  timer.cpp
src/input/: input_manager.rs
src/utility/: file_parser.rs  mod.rs  timer.rs
src/video/: color.rs  glfw_window.rs  mod.rs  shader_manager.rs  sprite.rs  texture.rs  window.rs
