[package]
name = "redgir"
version = "0.1.0"
edition = "2021"

[features]
default = []
cpp-bindings = []
python-bindings = []

[dependencies]
cmake = "0.1.54"
gl = "0.14.0"
glfw = "0.59.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[build-dependencies]
cmake = "0.1"
