[package]
name = "RedGir"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
strip = true

[lib]
name = "RedGir"
crate-type = ["cdylib"]

[features]
default = []
cpp-bindings = []
python-bindings = []

[dependencies]
gl = "0.14.0"
glfw = "0.59.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
